# 3d-ca-crypto

cube3d-sponge/: Cargo.toml
cube3d-sponge/src/: lib.rs
docs/: cube3d-sponge.tex  the-cube-is-just-plumbing.md
