[package]
name = "cube3d_sponge"
version = "0.1.0"
edition = "2021"

[lib]
name = "cube3d_sponge"
path = "src/lib.rs"

[[bin]]
name = "avalanche"
path = "src/bin/avalanche.rs"

[[bin]]
name = "linearity_test"
path = "src/bin/linearity_test.rs"

[[bin]]
name = "slide_test"
path = "src/bin/slide_test.rs"

[[bin]]
name = "distinguish"
path = "src/bin/distinguish.rs"

[[bin]]
name = "attack"
path = "src/bin/attack.rs"

[profile.release]
opt-level = 3

[[bin]]
name = "degree"
path = "src/bin/degree.rs"
